discussion/kv_engine/168586/168586_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Move ItemsToFlush & AggregatedFlushStats from VBucket

... and into vbucket_types.h. This further reduces coupling with
vbucket.h; so users of the aforementioned types don't necessarily need
to include the entirity of vbucket.h.

Impact on header cost is a small reduction in instances and average include time:

Before:
    kv_engine/engines/ep/src/vbucket.h (included 73 times, avg 419 ms), included via:

After:
    kv_engine/engines/ep/src/vbucket.h (included 71 times, avg 407 ms), included via:

Change-Id: I46c1f00c51c25acb6348cbc561e6192ba68884d2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 15:18:36.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 15:49:09.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42749/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42749/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16432/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16723/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16723/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17518/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17518/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24845/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24845/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14768/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:28: error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:39: error: use of undeclared identifier "EventDrivenDurabilityTimeoutIface" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:17: error: type-id cannot have a name [clang-diagnostic-error]
                VBucket&)>;
                ^~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:24: error: expected ")" [clang-diagnostic-error]
                VBucket&)>;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:73: note: to match this "("
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:26: error: expected ";" after alias declaration [clang-diagnostic-error]
                VBucket&)>;
                         ^
                         ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:59:14: error: unknown type name "SyncWriteTimeoutHandlerFactory" [clang-diagnostic-error]
extern const SyncWriteTimeoutHandlerFactory NoopSyncWriteTimeoutFactory;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:66:17: error: use of undeclared identifier "queued_item" [clang-diagnostic-error]
    std::vector<queued_item> items;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:70:5: error: unknown type name "CheckpointType" [clang-diagnostic-error]
    CheckpointType checkpointType = CheckpointType::Memory;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:73:5: error: unknown type name "UniqueFlushHandle" [clang-diagnostic-error]
    UniqueFlushHandle flushHandle;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14768/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:28:
error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14768/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13614/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36224/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15574/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4471/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
